--- a/Nexus-main/hesap.html
+++ b/Nexus-main/hesap.html
@@ -16,6 +16,20 @@
             font-family: 'Trifielia', sans-serif;
             font-size: 0.95em;
         }
+
+        /* Additional styling for consistent profile photo appearance */
+        .user-icon {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        #navProfileImg {
+            width: 40px;
+            height: 40px;
+            object-fit: cover;
+            border-radius: 50%;
+        }
     </style>
     <script src="index.js"></script>
 </head>
