--- a/Nexus-main/gizlilik.html
+++ b/Nexus-main/gizlilik.html
@@ -24,6 +24,12 @@
             document.documentElement.classList.add('dark-mode');
         }
     })();
+
+    // Check login state
+    const isLoggedIn = localStorage.getItem('isLoggedIn') === 'true';
+    if (!isLoggedIn) {
+        window.location.href = 'giris.html';
+    }
 </script>
 
 <body>
@@ -44,9 +50,9 @@
 
         <!-- Hesap Bölümü -->
         <div class="account">
-            <a href="giris.html"><button class="account-btn">Giriş Yap</button></a>
+            <a href="giris.html" class="login-button"><button class="account-btn">Giriş Yap</button></a>
             <a href="hesap.html" class="user-icon">
-                <div><img src="user.png" alt=""></div>
+                <div><img id="navProfileImg" src="user.png" alt=""></div>
             </a>
         </div>
 
@@ -75,6 +81,7 @@
                     <a href="hesap.html">Hesap Bilgileri</a>
                     <a href="guvenlik.html">Güvenlik</a>
                     <a href="gizlilik.html" class="active">Gizlilik</a>
+                    <button class="logout-btn" id="logoutBtn">Çıkış Yap</button>
                 </nav>
             </div>
 
@@ -178,43 +185,61 @@
             }
         });
 
+        // Çıkış yapma fonksiyonu
+        const logoutBtn = document.getElementById('logoutBtn');
+        if (logoutBtn) {
+            logoutBtn.addEventListener('click', function () {
+                // Kullanıcı oturumunu sonlandır
+                localStorage.removeItem('isLoggedIn');
+
+                // Profil fotoğrafını temizle (isteğe bağlı)
+                // localStorage.removeItem('userPhoto');
+
+                // Anasayfaya yönlendir
+                window.location.href = 'index.html';
+            });
+        }
+
         // Sayfa yüklendiğinde kaydedilmiş fotoğrafı kontrol et
         document.addEventListener('DOMContentLoaded', function () {
             const savedPhoto = localStorage.getItem('userPhoto');
-            if (savedPhoto) {
-                // Profil fotoğrafını güncelle (büyük fotoğraf)
-                document.querySelectorAll('.profile-image img').forEach(img => {
-                    img.src = savedPhoto;
-                    img.style.width = '150px';
-                    img.style.height = '150px';
-                    img.style.objectFit = 'cover';
-                    img.style.borderRadius = '50%';
-                });
+            const isLoggedIn = localStorage.getItem('isLoggedIn') === 'true';
+            const accountSection = document.querySelector('.account');
 
-                // User icon'unu güncelle (sağ üstteki küçük fotoğraf)
-                document.querySelectorAll('.user-icon img, .user-photo').forEach(img => {
-                    img.src = savedPhoto;
-                    img.style.width = '40px';
-                    img.style.height = '40px';
-                    img.style.objectFit = 'cover';
-                    img.style.borderRadius = '100%';
-                });
+            if (isLoggedIn) {
+                // Giriş yap butonunu gizle
+                document.querySelector('.login-button').style.display = 'none';
+
+                if (savedPhoto) {
+                    // Profil fotoğrafını güncelle (büyük fotoğraf)
+                    document.querySelectorAll('.profile-image img').forEach(img => {
+                        img.src = savedPhoto;
+                        img.style.width = '150px';
+                        img.style.height = '150px';
+                        img.style.objectFit = 'cover';
+                        img.style.borderRadius = '50%';
+                    });
+
+                    // User icon'unu güncelle (sağ üstteki küçük fotoğraf)
+                    document.querySelectorAll('#navProfileImg, .user-photo').forEach(img => {
+                        img.src = savedPhoto;
+                        img.style.width = '40px';
+                        img.style.height = '40px';
+                        img.style.objectFit = 'cover';
+                        img.style.borderRadius = '100%';
+                    });
+
+                    // Add has-profile class to user-icon
+                    document.querySelector('.user-icon').classList.add('has-profile');
+                }
             } else {
-                // Varsayılan fotoğrafların boyutlarını ayarla
-                document.querySelectorAll('.profile-image img').forEach(img => {
-                    img.style.width = '150px';
-                    img.style.height = '150px';
-                    img.style.objectFit = 'cover';
-                    img.style.borderRadius = '50%';
-                });
-
-                document.querySelectorAll('.user-icon img, .user-photo').forEach(img => {
-                    img.style.width = '40px';
-                    img.style.height = '40px';
-                    img.style.objectFit = 'cover';
-                    img.style.borderRadius = '100%';
-                });
+                // Redirect to login page if not logged in
+                window.location.href = 'giris.html';
+                return;
             }
+
+            // Complete UI loading
+            accountSection.classList.add('loaded');
         });
     </script>
 </body>
